--- a/css/style2.css
+++ b/css/style2.css
@@ -266,3 +266,38 @@ input[type=button]
 	margin: 0px auto;
 
 }
+
+
+
+
+.start {
+	width: 100%;
+	height: 500px;
+	overflow: visible;
+	
+	 background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
+	  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.start img {
+	margin-bottom: -100px;
+	position: relative;
+	z-index: 99;
+	float:left;
+}
+.start .summary {
+	margin-left: 500px;
+	padding-top: 250px;
+}
+
+.start .summary span {
+	background-color:white;
+	padding: 12px 20px;
+	font-size: 20px;
+	color: rgb(35,31,32); 
+}
+.start .summary p {
+	margin-bottom: 30px;
+}
