--- a/css/style2.css
+++ b/css/style2.css
@@ -154,20 +154,24 @@ background: url("../img/hex3.png")  no-repeat center center;
 .hollow img:nth-child(1) 
 {
 	
-	left:-50px;
+/*	left:-50px;
+*/
+	left:2%;
 }
 .hollow img:nth-child(2) 
 {
 	
 	top:300px;
-	right:-420px;
+	/*right:-420px;*/
+	right:-70%;
 }
 
 .hollow img:nth-child(3) 
 {
 	
 	top:600px;
-	right:-37px;
+	/*right:-37px;*/
+	right:60%;
 }
 .more {
 	position: relative;
