--- a/css/style2.css
+++ b/css/style2.css
@@ -143,8 +143,9 @@ background: url("../img/hex3.png")  no-repeat center center;
 }
 
 .hollow {
-	position: absolute;
-	
+/*	position: absolute;
+*/	
+position: relative;
 	top:400px;
 }
 .hollow img {
@@ -163,7 +164,7 @@ background: url("../img/hex3.png")  no-repeat center center;
 	
 	top:300px;
 	/*right:-420px;*/
-	right:-70%;
+	right:-51%;
 }
 
 .hollow img:nth-child(3) 
@@ -171,7 +172,7 @@ background: url("../img/hex3.png")  no-repeat center center;
 	
 	top:600px;
 	/*right:-37px;*/
-	right:60%;
+	left:-45%;
 }
 .more {
 	position: relative;
@@ -197,8 +198,8 @@ background: url("../img/hex3.png")  no-repeat center center;
 	width:100%;
 	z-index: -1;
 	overflow: hidden;
-	background: url("../img/party.png") no-repeat center -30px; 
-}
+/*	background: url("../img/party.png") no-repeat center -30px; 
+*/}
 .subscribe form {
 	display: block;
 	width: 900px;
@@ -260,16 +261,22 @@ input[type=button]
     cursor: pointer;
 }
 .social {
-	height:233px;
 	background-color: rgb(167,155,148);
-	padding-top:85px;
+	text-align: center;
+	font-size: 30px;
+	color: white;
+	padding: 80px;
 
 }
-.social img {
+
+#facebook, #twitter {
+	margin-left: 5px;
+}
+/*.social img {
 	display: block;
 	margin: 0px auto;
 
-}
+}*/
 
 
 
