fixing checkbox, http post javascript

--- a/css/style2.css
+++ b/css/style2.css
@@ -218,46 +218,52 @@ input[type=text] {
 	background-color: rgba(165,155,148,0.05);
 	margin: 20px auto;
 }
-input[type=checkbox] {
-							display:none;
-						}
 
-						input[type=checkbox].css-checkbox + label.css-label {
-							padding-left:17px;
-							height:12px; 
-							display:inline-block;
-							line-height:12px;
-							margin-top:15px;
-							background-repeat:no-repeat;
-							background-position: 0 0;
-							
-							vertical-align:middle;
-							cursor:pointer;
+input[type=checkbox].css-checkbox {
+	display:none;
+}
 
-						}
+input[type=checkbox].css-checkbox + label.css-label {
+	padding-left:17px;
+	height:12px; 
+	display:inline-block;
+	line-height:12px;
+	background-repeat:no-repeat;
+	background-position: 0 0;
+	font-size:12px;
+	vertical-align:middle;
+	cursor:pointer;
+}
 
-						input[type=checkbox].css-checkbox:checked + label.css-label {
-							background-position: 0 -12px;
-						}
-						label.css-label {
-				background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
-				-webkit-touch-callout: none;
-				-webkit-user-select: none;
-				-khtml-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-			}
+input[type=checkbox].css-checkbox:checked + label.css-label {
+	background-position: 0 -12px;
+}
+
+#subscribed {
+	color: green;
+	font-size: 15px;
+}
+
+label.css-label {
+	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 input[type=button]
 {
     display: block;
-   color: white;
+    color: white;
 
-   font-size: 20px;
+    font-size: 20px;
     padding: 5px 15px;
     margin: 0 auto;
     background-color: rgb(35,31,32);
-   font-family: 'Merriweather', serif;
+    font-family: 'Merriweather', serif;
     cursor: pointer;
 }
 .social {
