--- a/css/style2.css
+++ b/css/style2.css
@@ -104,9 +104,8 @@ path[class^="side"]
 	  padding: 15px;
 	  background: white;
 }
-.summary h3 {
+.summaryBottom h3 {
 	display: block;
-	height: 427px;
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-weight: 400; 
 	font-size: 70px;
@@ -117,37 +116,31 @@ path[class^="side"]
 	position: relative;
 
 }
-.lines h3:nth-child(1)
+.lines img:nth-child(1)
 {
 
-line-height: 400px;
-padding-right: 70%;
-text-align: right;
-background: url("../img/hex1.png")  no-repeat center center;
+	margin-left: 40%;
 }
-.lines h3:nth-child(2)
+.lines img:nth-child(2)
 {
-	
-line-height: 340px;
-padding-left: 55%;
-text-align: left;
-background: url("../img/hex2.png")  no-repeat center center;
+	margin-left: 24%;
 }
-.lines h3:nth-child(3)
+.lines img:nth-child(3)
 {
-	
-line-height: 460px;
-padding-right: 55%;
-text-align: right;
-background: url("../img/hex3.png")  no-repeat center center;
+	margin-left: 37%;
 }
 
 .hollow {
 /*	position: absolute;
 */	
 position: relative;
-	top:400px;
+	top:0px;
 }
+
+.hollowTable {
+	left:2%;
+}
+
 .hollow img {
 	position: relative;
 	opacity: 0.8;
@@ -162,7 +155,6 @@ position: relative;
 .hollow img:nth-child(2) 
 {
 	
-	top:300px;
 	/*right:-420px;*/
 	right:-51%;
 }
@@ -170,7 +162,6 @@ position: relative;
 .hollow img:nth-child(3) 
 {
 	
-	top:600px;
 	/*right:-37px;*/
 	left:-45%;
 }
@@ -185,7 +176,7 @@ position: relative;
 	background: white;
 	padding: 20px;
 	position: relative;
-  top: 50%;
+  	top: 50%;
   transform: translateY(-50%);
 }
 .seperator {
@@ -299,16 +290,55 @@ input[type=button]
 	float:left;
 }
 .start .summary {
-	margin-left: 500px;
 	padding-top: 250px;
 }
 
-.start .summary span {
+.start .summary p {
 	background-color:white;
 	padding: 12px 20px;
 	font-size: 20px;
+	line-height: 30px;
 	color: rgb(35,31,32); 
 }
 .start .summary p {
 	margin-bottom: 30px;
+}
+
+
+
+#container
+{
+    position:relative;
+    background-image: "img/hex_hollow.png";
+}
+
+#image
+{    
+    position:absolute;
+    left:10px;
+    top:0;
+}
+#text
+{
+    z-index:100;
+    position:absolute;    
+    font-size:24px;
+    font-weight:bold;
+
+}
+
+
+
+.poop {
+
+	position: relative;
+
+}
+.poop h3:nth-child(1)
+{
+
+line-height: 460px;
+padding-right: 70%;
+text-align: right;
+background: url("../img/hex1.png")  no-repeat center center;
 }
