tweaking start banner

--- a/css/style_before.css
+++ b/css/style_before.css
@@ -412,6 +412,8 @@
 		text-align: right; 
 		margin-top:0px;
 		height:30px;
+		color:white;
+		background-color:black; width:100%;
 	}
 
 	.location a{
