--- a/css/style2.css
+++ b/css/style2.css
@@ -433,6 +433,8 @@
 		text-align: right; 
 		margin-top:0px;
 		height:30px;
+		color:white;
+ 		background-color:black; width:100%;
 	}
 
 	.location a{
