--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -1,7 +1,5 @@
-@media (min_width:480px) and (max-width: 1260px) {
-
-
-	@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
+@media only screen and (max-device-width: 480px){
+		@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
 
 	body {
 		margin:0;
@@ -91,6 +89,7 @@
 	.info {
 		width: 100%;
 		position: relative;
+		display:none;
 	}
 
 	.question {
@@ -122,25 +121,19 @@
 	.lines img:nth-child(1)
 	{
 
-		margin-left: 26%;
-		margin-top:175px;
-		height:349px;
+		margin-left: 39%;
 	/*	height: 460px;
 	*/}
 	.lines img:nth-child(2)
 	{
-		margin-left: 7%;
+		margin-left: 27%;
 	/*	height: 460px;
-	*/	margin-top: 0px;
-		height:349px;
-
+	*/	margin-top: -100px;
 
 	}
 	.lines img:nth-child(3)
 	{
-		margin-left: -13%;
-		height:349px;
-		margin-top: 0px;
+		margin-left: 14%;
 	}
 
 	.hollow {
@@ -174,19 +167,16 @@
 	.hollow1 {
 		posistion:absolute;
 		background: url("../img/hex_dine.png") no-repeat;
-		height:342px;
+		height:435px;
 		text-align:center;
 		margin-left:5%;
-		width:300px;
-		background-size:100%;
+		width:375px;
 		}
 	.hollow1 p{
+		color:;
 		padding-top: 30%;
 		text-align: left;
-		padding-left: 13%;
-		background-size:80%;
-		font-size:85%;
-		width:80%;
+		padding-left: 71px;
 	}
 
 
@@ -194,57 +184,46 @@
 		posistion:absolute;
 		background: url("../img/hex_connect.png") no-repeat;
 		text-align:center;
-		margin-left: 59%;
-		margin-top: 100px;
-		width:300px;
-		height:342px;
-		background-size:100%;
-
+		margin-left: 66%;
+		margin-top: -146px;
+		width:375px;
+		height:435px;
 		}
 	.hollow2 p{
 		padding-top: 30%;
 		text-align: left;
-		padding-left: 13%;
-		width:80%;
-		font-size:85%;
+		padding-left: 100px;
 	}
 
 	.hollow3 {
 		posistion:absolute;
 		background: url("../img/hex_learn.png") no-repeat;
-		height:342px;
+		height:435px;
 		text-align:center;
-		margin-left: 59%;
-		width:300px;
+		margin-left: 66%;
+		width:375px;
 		margin-top:-48px;
-		background-size:100%;
-		margin-top: -33px;
 		}
 	.hollow3 p{
 		padding-top: 30%;
 		text-align: left;
-		padding-left: 13%;
-		width:80%;
-		font-size:85%;
+		padding-left: 100px;
 	}
 
 
 	.hollow4 {
 		posistion:absolute;
 		background: url("../img/hex_play.png") no-repeat;
-		height:342px;
+		height:435px;
 		text-align:center;
-		margin-left: 4%;
-		margin-top: 150px;
-		width:300px;
-		background-size:100%;
+		margin-left: 10%;
+		margin-top: -100px;
+		width:375px;
 		}
 	.hollow4 p{
 		padding-top: 30%;
 		text-align: left;
-		padding-left: 13%;
-		width:80%;
-		font-size:85%;
+		padding-left: 100px;
 	}
 
 
@@ -434,36 +413,39 @@
 		margin-top:0px;
 		height:30px;
 		color:white;
- 		background-color:black; width:100%;
+		background-color:black; width:100%;
 	}
 
 	.location a{
 		color:white;
 		background-color:black; width:100%;
 	}
-
-
-	.side_logo{
-		background: url("../img/side_logo.png") no-repeat;
-		z-index:100;
-	height: 100%;
-	background-size: 40%;
-	}
-
-	.side_logo p{
-		color: white;
-	width: 20%;
-	font-size: medium;
-	padding-top: 40%;
-	padding-left: 16%;
-	}
-
 	.side_logo_img{
-		width:40%;
+		width:25%;
 	}
 
-	.mobile_info{
-		display:none;
+	.mobile_dine {
+		background: url("../img/dine.png")  no-repeat center center;
+		height:400px;
+		text-align:center;
 	}
 
+	.mobile_work {
+		background: url("../img/connect.png")  no-repeat center center;
+		height:400px;
+		text-align:center;
+	}
+
+	.mobile_learn {
+		background: url("../img/learn.png")  no-repeat center center;
+		height:400px;
+		text-align:center;
+	}
+
+
+	.mobile_play {
+		background: url("../img/play.png")  no-repeat center center;
+		height:400px;
+		text-align:center;
+	}
 }
