--- a/css/style2.css
+++ b/css/style2.css
@@ -203,7 +203,7 @@ position: relative;
 .subscribe form {
 	display: block;
 	width: 900px;
-	margin: 210px auto auto auto;
+	margin: 0px auto 50px auto;
 	text-align: center;
 }
 
@@ -271,6 +271,8 @@ input[type=button]
     font-family: 'Merriweather', serif;
     cursor: pointer;
 }
+
+
 .social {
 	background-color: rgb(167,155,148);
 	text-align: center;
