--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -409,7 +409,7 @@
 		background-color:#231f20;
 		width:'100%';
 		padding-top:30px;
-		text-align: right; 
+ 		text-indent:75%;
 		margin-top:0px;
 		height:30px;
 		color:white;
