--- a/css/style2.css
+++ b/css/style2.css
@@ -290,9 +290,9 @@ path[class^="side"]
 
 .start {
 	width: 100%;
-	height: 500px;
+	height: 447px;
 	overflow: visible;
-	
+	margin-top:100px;
 	 background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
 	  -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -399,6 +399,20 @@ padding-left: 16%;
 
 .mobile_info{
 	display:none;
+}
+
+.side_logo_fill{
+	background: url("../img/side_logo_empty.png")  no-repeat;
+	background-size: 250px 600px;
+	height:600px;
+	color:white;
+	z-index:99;
+	float:left;
+	width:250px;
+}
+.side_logo_fill p{
+	margin-left: 169px;
+	margin-top: 350px;
 }
 
 }
