--- a/css/style_before.css
+++ b/css/style_before.css
@@ -339,12 +339,13 @@
 		width: 100%;
 		height: 747px;
 		overflow: visible;
-		
+		margin-top:100px;
 		 background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
 		  -webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
 	  background-size: cover;
+	  z-index:99;
 	}
 	.start img {
 		margin-bottom: -100px;
@@ -416,6 +417,7 @@
 		background-color:black; width:100%;
 		text-indent:75%;
 		font-size:larger;
+		z-index:98;
 	}
 
 	.location a{
@@ -455,5 +457,20 @@
 		height:400px;
 		text-align:center;
 	}
+
+.side_logo_fill{
+	background: url("../img/side_logo_empty.png")  no-repeat;
+	background-size:100%;
+	height:900px;
+	color:white;
+	z-index:99;
+	float:left;
+	width:450px;
+}
+.side_logo_fill p{
+	margin-left: 169px;
+	margin-top: 350px;
+}
+
 
 }
