--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -336,7 +336,7 @@
 
 	.start {
 		width: 100%;
-		height: 500px;
+		height: 300px;
 		overflow: visible;
 		
 		 background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
@@ -427,27 +427,41 @@
 
 	.mobile_dine {
 		background: url("../img/dine.png")  no-repeat center center;
-		height:400px;
+		height:300px;
 		text-align:center;
 	}
 
 	.mobile_work {
 		background: url("../img/connect.png")  no-repeat center center;
-		height:400px;
+		height:300px;
 		text-align:center;
 	}
 
 	.mobile_learn {
 		background: url("../img/learn.png")  no-repeat center center;
-		height:400px;
+		height:300px;
 		text-align:center;
 	}
 
 
 	.mobile_play {
 		background: url("../img/play.png")  no-repeat center center;
-		height:400px;
+		height:300px;
 		text-align:center;
+	}
+
+	.side_logo_fill{
+		background: url("../img/side_logo_empty.png")  no-repeat;
+		background-size: 250px 400px;
+		height:600px;
+		color:white;
+		z-index:99;
+		float:left;
+		width:250px;
+	}
+
+	.side_logo_fill p i{
+		display:none;
 	}
 
 }
