--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -336,7 +336,7 @@
 
 	.start {
 		width: 100%;
-		height: 300px;
+		height: 288px;
 		overflow: visible;
 		
 		 background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
@@ -428,37 +428,46 @@
 	.mobile_dine {
 		background: url("../img/dine.png")  no-repeat center center;
 		height:300px;
-		text-align:center;
+		padding:0 20px 0 20px;
+		text-align:left;
 		margin-top:50px;
 	}
 
 	.mobile_work {
 		background: url("../img/connect.png")  no-repeat center center;
 		height:300px;
-		text-align:center;
+		padding:0 20px 0 20px;
+		text-align:left;
 	}
 
 	.mobile_learn {
 		background: url("../img/learn.png")  no-repeat center center;
+		padding:0 20px 0 20px;
 		height:300px;
-		text-align:center;
+		text-align:left;
 	}
 
 
 	.mobile_play {
 		background: url("../img/play.png")  no-repeat center center;
+		padding:0 20px 0 20px;
 		height:300px;
-		text-align:center;
+		text-align:left;
 	}
 
 	.side_logo_fill{
 		background: url("../img/side_logo_empty.png")  no-repeat;
-		background-size: 250px 400px;
+		background-size: 150px 400px;
 		height:400px;
 		color:white;
 		z-index:99;
 		float:left;
 		width:250px;
+	}
+
+	.side_logo_fill p{
+		margin-left:30px;
+		margin-top:50px;
 	}
 
 	.side_logo_fill p i{
