--- a/css/style_before.css
+++ b/css/style_before.css
@@ -463,13 +463,13 @@
 	background-size:100%;
 	height:900px;
 	color:white;
-	z-index:99;
 	float:left;
 	width:450px;
 }
 .side_logo_fill p{
 	margin-left: 169px;
 	margin-top: 350px;
+	margin-right:20px;
 }
 	.mobile_text {
 		display:none;
