--- a/css/style2.css
+++ b/css/style2.css
@@ -366,8 +366,8 @@ background: url("../img/hex1.png")  no-repeat center center;
 	margin-top:0px;
 	height:30px;
 	color:white;
-		background-color:black; width:100%;
-		text-indent:75%;
+	background-color:black; width:100%;
+	text-indent:30%;
 	font-size:larger;
 }
 
@@ -411,8 +411,10 @@ padding-left: 16%;
 	width:250px;
 }
 .side_logo_fill p{
-	margin-left: 169px;
-	margin-top: 350px;
+	margin-left: 100px;
+	margin-top: 114px;
+	font-size: 15px;
+	margin-right: 23px;
 }
 	.mobile_text {
 		display:none;
