fix form for mobile

--- a/css/style_before.css
+++ b/css/style_before.css
@@ -246,6 +246,11 @@
 		position: relative;
 		background: white;
 	}
+
+	.email {
+		text-align: center;
+	}
+
 	.subscribe {
 		margin: 50px auto;
 		height: 250px;
