--- a/css/style_before.css
+++ b/css/style_before.css
@@ -420,9 +420,15 @@
 }
 .side_logo_fill p{
 	margin-left: 169px;
-	margin-top: 350px;
-	font-size:20px;
+	margin-top: 250px;
 	margin-right:20px;
+	font-size:29px;
+
+}
+
+.side_logo_fill p i{
+	font-size:20px;
+
 }
 	.mobile_text {
 		display:none;
