--- a/css/style2.css
+++ b/css/style2.css
@@ -122,7 +122,7 @@ path[class^="side"]
 .lines img:nth-child(1)
 {
 
-	margin-left: 26%;
+	margin-left: 22%;
 	margin-top:175px;
 	height:349px;
 /*	height: 460px;
@@ -138,9 +138,9 @@ path[class^="side"]
 }
 .lines img:nth-child(3)
 {
-	margin-left: -13%;
+	margin-left: -18%;
 	height:349px;
-	margin-top: 0px;
+	margin-top: 15px;
 }
 
 .hollow {
@@ -172,18 +172,17 @@ path[class^="side"]
 }
 
 .hollow1 {
-	posistion:absolute;
 	background: url("../img/hex_dine.png") no-repeat;
 	height:342px;
 	text-align:center;
-	margin-left:5%;
+	margin-left:2%;
 	width:300px;
 	background-size:100%;
 	}
 .hollow1 p{
 	padding-top: 30%;
-	text-align: left;
-	padding-left: 13%;
+	text-align: left;`
+	padding-left: 40px;
 	background-size:80%;
 	font-size:85%;
 	width:80%;
@@ -191,7 +190,6 @@ path[class^="side"]
 
 
 .hollow2 {
-	posistion:absolute;
 	background: url("../img/hex_connect.png") no-repeat;
 	text-align:center;
 	margin-left: 59%;
@@ -210,7 +208,6 @@ path[class^="side"]
 }
 
 .hollow3 {
-	posistion:absolute;
 	background: url("../img/hex_learn.png") no-repeat;
 	height:342px;
 	text-align:center;
@@ -230,7 +227,6 @@ path[class^="side"]
 
 
 .hollow4 {
-	posistion:absolute;
 	background: url("../img/hex_play.png") no-repeat;
 	height:342px;
 	text-align:center;
