--- a/css/style2.css
+++ b/css/style2.css
@@ -180,9 +180,9 @@ path[class^="side"]
 	background-size:100%;
 	}
 .hollow1 p{
+	padding-left:13%;
 	padding-top: 30%;
-	text-align: left;`
-	padding-left: 40px;
+	text-align: left;
 	background-size:80%;
 	font-size:85%;
 	width:80%;
