--- a/css/style.css
+++ b/css/style.css
@@ -1,203 +1,322 @@
 body {
-	margin:0;
-	font-family: 'Merriweather', serif;
-	font-size: 20px;
-}
+  margin: 0;
+  font-family: "Merriweather", serif;
+  font-size: 16px;
+  line-height: 1.5em;
+  color: #665e5b; }
+
 a {
-	text-decoration: none;
-	color:white;
+  text-decoration: none;
+  color: black; }
 
-}
+h1, h2, h3 {
+  font-family: "Fjalla One", sans-serif;
+  font-weight: normal;
+  line-height: 1.2em;
+  text-transform: uppercase; }
 
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both; }
 
-path[class^="side"]
-{
-	-webkit-transition: fill 2s ease;
-	-moz-transition: fill 2s ease;
-	-o-transition: fill 2s ease;
-	transition: fill 2s ease;
-}
+.mobile {
+  display: none; }
 
+path[class^="side"] {
+  -webkit-transition: fill 2s ease;
+  -moz-transition: fill 2s ease;
+  -o-transition: fill 2s ease;
+  transition: fill 2s ease; }
 
 .active {
-	-webkit-transition: fill 0.1s ease !important;
-	-moz-transition: fill 0.1s ease !important;
-	-o-transition: fill 0.1s ease !important;
-	transition: fill 0.1s ease !important;
-}
+  -webkit-transition: fill 0.1s ease !important;
+  -moz-transition: fill 0.1s ease !important;
+  -o-transition: fill 0.1s ease !important;
+  transition: fill 0.1s ease !important; }
+
 .mobile .active {
-	-webkit-transition: fill 0s !important;
-	-moz-transition: fill 0s !important;
-	-o-transition: fill 0s !important;
-	transition: fill 0s !important;
-}
+  -webkit-transition: fill 0s !important;
+  -moz-transition: fill 0s !important;
+  -o-transition: fill 0s !important;
+  transition: fill 0s !important; }
+
 .side0 {
-	fill:white;
-}
+  fill: white; }
 
 .side0.active {
-	fill: rgb(91,201,227);
-}
+  fill: #5bc9e3; }
 
 .side1 {
-	fill:rgb(240,240,240);
-}
+  fill: #f0f0f0; }
 
 .side1.active {
-	fill:rgb(222,225,78);
-}
+  fill: #dee14e; }
 
 .side2 {
-	fill:rgb(247,247,247);
-}
+  fill: #f7f7f7; }
 
-.side2.active{
-	fill:rgb(167,155,148);
-}
+.side2.active {
+  fill: #a79b94; }
 
 .mask {
-	fill:black;
-	-webkit-transition: fill 20s ease;
-	-moz-transition: fill 20s ease;
-	-o-transition: fill 20s ease;
-	transition: fill 20s ease;
-}
+  fill: black;
+  -webkit-transition: fill 20s ease;
+  -moz-transition: fill 20s ease;
+  -o-transition: fill 20s ease;
+  transition: fill 20s ease; }
+
 .mobile .mask {
-	fill:black;
-	-webkit-transition: fill 30s ease;
-	-moz-transition: fill 30s ease;
-	-o-transition: fill 30s ease;
-	transition: fill 30s ease;
-}
+  fill: black;
+  -webkit-transition: fill 30s ease;
+  -moz-transition: fill 30s ease;
+  -o-transition: fill 30s ease;
+  transition: fill 30s ease; }
+
 .mask.active {
-	fill:white;
-}
+  fill: white; }
+
 .home img {
-	display: block;
-	position: absolute;
-	bottom: 30px;
-	margin-left: -15px;
-	left:50%;
-}
-.info {
-	width: 100%;
-	height: 500px;
-	overflow: visible;
-	
-	 background: url("../img/Courtyard-Color2.jpg") no-repeat center center; 
-	  -webkit-background-size: cover;
+  display: block;
+  position: absolute;
+  bottom: 20px;
+  margin-left: -15px;
+  left: 50%; }
+
+.intro {
+  width: 100%;
+  height: 600px;
+  overflow: visible;
+  background: url("../img/Courtyard-Color2.jpg") no-repeat center center;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
-.info img {
-	margin-bottom: -100px;
-	position: relative;
-	z-index: 99;
-	float:left;
-}
-.info .summary {
-	margin-left: 500px;
-	padding-top: 250px;
-}
+  color: #fff; }
+  .intro .introSide {
+    margin-top: -160px;
+    z-index: 100;
+    position: absolute;
+    width: 457px;
+    max-width: 50%;
+    height: 912px;
+    overflow: visible;
+    background: url("../img/side_logo_empty.png") no-repeat center center;
+    background-size: 100%; }
+    .intro .introSide h2 {
+      font-size: 4em;
+      margin: 391px auto 30px 130px; }
+    .intro .introSide p {
+      font-style: italic;
+      margin: 0px 25px auto 180px;
+      display: block; }
 
-.info .summary span {
-	background-color:white;
-	padding: 12px 20px;
-	font-size: 40px;
-	color: rgb(35,31,32); 
-}
-.info .summary p {
-	margin-bottom: 30px;
-}
-.more {
+.location {
+  background-color: #231f20;
+  position: relative;
+  z-index: 1; }
+  .location a {
+    display: block;
+    text-align: right;
+    color: white;
+    margin: 0 100px;
+    padding: 20px;
+    font-family: "Fjalla One", sans-serif;
+    font-size: 1.3em;
+    text-transform: uppercase; }
+    .location a img, .location a p {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 5px; }
 
-	background-color: rgb(35,31,32);
-	
-}
-.more h3{
-	display: block;
-	text-align: right;
-	color: white;
-	margin: 0 100px;
-	padding: 20px;
-}
+.hexImages {
+  position: absolute;
+  width: 100%; }
+  .hexImages img {
+    display: block;
+    margin: auto; }
+    .hexImages img:nth-child(1) {
+      margin-top: 100px; }
+    .hexImages img:nth-child(2) {
+      margin-top: -100px; }
+
+.hexText h3 {
+  font-size: 3.5em;
+  color: #231f20;
+  margin: 0; }
+
+.seperator {
+  background: url("../img/border.png") repeat-y center 0;
+  height: 250px;
+  position: relative;
+  margin: 80px auto; }
+
 .subscribe {
-	margin: 0 auto;
-	height: 550px;
-	width:100%;
-	z-index: -1;
-	overflow: hidden;
-	background: url("../img/party.png") no-repeat; 
-}
+  margin: 0 auto;
+  height: 350px;
+  width: 100%;
+  z-index: -1;
+  overflow: hidden;
+  font-size: 1.2em; }
+
 .subscribe form {
-	display: block;
-	width: 900px;
-	margin: 210px auto auto auto;
-	text-align: center;
-}
+  display: block;
+  margin: 50px auto;
+  text-align: center; }
 
 input {
-	border: 1px solid rgb(35,31,32);
-}
+  border: 1px solid #231f20; }
 
 input[type=text] {
-	width: 346px;
-	height:34px;
-	border: 1px solid rgb(167,155,148);
-	background-color: rgba(165,155,148,0.05);
-	margin: 20px auto;
-}
+  width: 346px;
+  height: 34px;
+  border: 1px solid #665e5b;
+  background-color: rgba(102, 94, 91, 0.05);
+  margin: 20px auto; }
+
 input[type=checkbox] {
-							display:none;
-						}
+  display: none; }
 
-						input[type=checkbox].css-checkbox + label.css-label {
-							padding-left:17px;
-							height:12px; 
-							display:inline-block;
-							line-height:12px;
-							margin-top:15px;
-							background-repeat:no-repeat;
-							background-position: 0 0;
-							
-							vertical-align:middle;
-							cursor:pointer;
+input[type=checkbox].css-checkbox + label.css-label {
+  padding-left: 17px;
+  height: 12px;
+  display: inline-block;
+  line-height: 12px;
+  margin-top: 15px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  vertical-align: middle;
+  cursor: pointer; }
 
-						}
+input[type=checkbox].css-checkbox:checked + label.css-label {
+  background-position: 0 -12px; }
 
-						input[type=checkbox].css-checkbox:checked + label.css-label {
-							background-position: 0 -12px;
-						}
-						label.css-label {
-				background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
-				-webkit-touch-callout: none;
-				-webkit-user-select: none;
-				-khtml-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-			}
-input[type=button]
-{
-    display: block;
-   color: white;
+label.css-label {
+  background-image: url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
 
-   font-size: 20px;
-    padding: 5px 15px;
-    margin: 0 auto;
-    background-color: rgb(35,31,32);
-   font-family: 'Merriweather', serif;
-    cursor: pointer;
-}
+input[type=button] {
+  display: block;
+  color: white;
+  font-size: 20px;
+  padding: 5px 15px;
+  margin: 0 auto;
+  background-color: #231f20;
+  font-family: "Merriweather", serif;
+  cursor: pointer; }
+
 .social {
-	height:233px;
-	background-color: rgb(167,155,148);
-	padding-top:85px;
+  height: 233px;
+  background-color: #a79b94;
+  padding-top: 85px;
+  text-align: center; }
+  .social h3, .social a {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 5px;
+    font-size: 2em;
+    color: #fff; }
 
-}
-.social img {
-	display: block;
-	margin: 0px auto;
+@media (min-width: 768px) {
+  .hexText {
+    position: relative;
+    margin-bottom: -150px; }
+    .hexText div.outer {
+      width: 381px;
+      height: 439px;
+      display: table;
+      position: relative; }
+      .hexText div.outer .inner {
+        display: table-cell;
+        vertical-align: middle; }
+      .hexText div.outer h3 {
+        padding-left: 95px; }
+      .hexText div.outer p {
+        padding-left: 95px;
+        width: 270px; }
+      .hexText div.outer:nth-child(1) {
+        background: url("../img/hex_dine.png") center center no-repeat;
+        margin-right: 65%;
+        float: right; }
+      .hexText div.outer:nth-child(2) {
+        background: url("../img/hex_connect.png") center center no-repeat;
+        top: -254px;
+        margin-left: 65%; }
+      .hexText div.outer:nth-child(3) {
+        background: url("../img/hex_learn.png") center center no-repeat;
+        top: -300px;
+        margin-left: 65%; }
+      .hexText div.outer:nth-child(4) {
+        background: url("../img/hex_play.png") center center no-repeat;
+        float: right;
+        margin-right: 50%;
+        top: -150px; } }
+@media (min-width: 768px) and (max-width: 1320px) {
+  .hexImages img:nth-child(1) {
+    margin-top: 230px; }
+  .hexImages img:nth-child(3) {
+    margin-top: 300px;
+    padding-left: 50px; }
 
-}
+  .hexText div.outer:nth-child(1) {
+    margin-right: 50%;
+    margin-top: -100px; }
+  .hexText div.outer:nth-child(2) {
+    margin-left: 60%;
+    top: 180px; }
+  .hexText div.outer:nth-child(3) {
+    top: 120px;
+    margin-left: 60%; } }
+@media (max-width: 767px) {
+  .mobile {
+    display: inherit; }
+
+  .notmobile {
+    display: none; }
+
+  .seperator {
+    display: none; }
+
+  .intro {
+    height: 288px; }
+    .intro .introSide {
+      margin-top: -100px;
+      height: 450px; }
+      .intro .introSide h2 {
+        font-size: 2em;
+        margin: 200px auto 30px 50px; }
+      .intro .introSide p {
+        display: none; }
+
+  .introText {
+    margin: 80px 20px; }
+
+  .location a {
+    text-align: center;
+    margin: 0; }
+
+  .hexImages {
+    display: none; }
+
+  .hexText .outer {
+    margin: 40px 20px;
+    min-height: 240px; }
+    .hexText .outer:nth-child(1) {
+      background: url("../img/dine.png") right bottom no-repeat; }
+    .hexText .outer:nth-child(2) {
+      background: url("../img/connect.png") right bottom no-repeat; }
+    .hexText .outer:nth-child(3) {
+      background: url("../img/learn.png") right bottom no-repeat; }
+    .hexText .outer:nth-child(4) {
+      background: url("../img/play.png") right bottom no-repeat; }
+
+  .drawing {
+    border: 1px solid #a79b94;
+    height: 229px;
+    width: 100%;
+    background: url("../img/drawing.png") center center no-repeat; } }
