--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ path[class^="side"] {
   -o-transition: fill 0.1s ease !important;
   transition: fill 0.1s ease !important; }
 
-.mobile .active {
+.accelerometer .active {
   -webkit-transition: fill 0s !important;
   -moz-transition: fill 0s !important;
   -o-transition: fill 0s !important;
@@ -66,7 +66,7 @@ path[class^="side"] {
   -o-transition: fill 20s ease;
   transition: fill 20s ease; }
 
-.mobile .mask {
+.accelerometer .mask {
   fill: black;
   -webkit-transition: fill 30s ease;
   -moz-transition: fill 30s ease;
@@ -105,7 +105,7 @@ path[class^="side"] {
     background-size: 100%; }
     .intro .introSide h2 {
       font-size: 4em;
-      margin: 391px auto 30px 106px; }
+      margin: 391px auto 30px 130px; }
     .intro .introSide p {
       font-style: italic;
       margin: 0px 25px auto 180px;
@@ -119,7 +119,7 @@ path[class^="side"] {
     display: block;
     text-align: right;
     color: white;
-    margin: 0 50px;
+    margin: 0 100px;
     padding: 20px;
     font-family: "Fjalla One", sans-serif;
     font-size: 1.3em;
@@ -260,18 +260,18 @@ input[type=button] {
   .hexImages img:nth-child(1) {
     margin-top: 230px; }
   .hexImages img:nth-child(3) {
-    margin-top: 344px;
-    padding-left: 16px; }
+    margin-top: 300px;
+    padding-left: 50px; }
 
   .hexText div.outer:nth-child(1) {
     margin-right: 50%;
     margin-top: -100px; }
   .hexText div.outer:nth-child(2) {
-    margin-left: 50%;
-    top: 216px; }
+    margin-left: 60%;
+    top: 180px; }
   .hexText div.outer:nth-child(3) {
-    top: 136px;
-    margin-left: 50%; } }
+    top: 120px;
+    margin-left: 60%; } }
 @media (max-width: 767px) {
   .mobile {
     display: inherit; }
