--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,9 @@ input[type=text] {
   height: 34px;
   border: 1px solid #665e5b;
   background-color: rgba(102, 94, 91, 0.05);
-  margin: 20px auto; }
+  margin: 20px auto;
+  font-size: 1.2em;
+  padding: 0 10px; }
 
 input[type=checkbox] {
   display: none; }
@@ -200,10 +202,10 @@ label.css-label {
   -ms-user-select: none;
   user-select: none; }
 
-input[type=button] {
+input[type=submit] {
   display: block;
   color: white;
-  font-size: 20px;
+  font-size: 1.2em;
   padding: 5px 15px;
   margin: 0 auto;
   background-color: #231f20;
