remove textbox border

--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,8 @@ path[class^="side"] {
 input {
   border: 1px solid #231f20; }
 
-input.middle:focus {
-    outline-width: 0;
+textarea:focus, input:focus{
+    outline: 0;
 }
 
 input[type=text] {
