--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,10 @@ input[type=submit] {
     font-size: 2em;
     color: #fff; }
 
+.success {
+  text-align: center;
+  display: none; }
+
 @media (min-width: 768px) {
   .hexText {
     position: relative;
@@ -284,6 +288,14 @@ input[type=submit] {
   .hexText div.outer:nth-child(3) {
     top: 140px;
     margin-left: 50%; } }
+@media (max-width: 767px) and (orientation: landscape) {
+  .intro .introSide {
+    max-width: 35%; } }
+@media (max-width: 480px) {
+  .intro .introSide {
+    max-width: 60%; }
+    .intro .introSide h2 {
+      font-size: 1.8em; } }
 @media (max-width: 767px) {
   .mobile {
     display: inherit; }
