--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,9 @@ input[type=submit] {
   display: none; }
 
 @media (min-width: 768px) {
+  .bottom {
+    height: 100px; }
+
   .hexText {
     position: relative;
     margin-bottom: -150px; }
