Parrallex scrolling fix for Safari and Firefox

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,16 +4,26 @@ $lightBrown: #a79b94;
 $font-header: 'Fjalla One', sans-serif;
 $font-body: 'Merriweather', serif;
 
+
+@mixin translate($x, $y) {
+	-ms-transform: translate($x, $y); /* IE 9 */
+	-webkit-transform: translate($x, $y); /* Chrome, Safari, Opera */
+	transform:translate($x, $y);
+}
+
+
 body {
 	margin:0;
 	font-family: $font-body;
 	font-size: 16px;
 	line-height: 1.5em;
 	color: $brown;
+
 }
 img {
 	border:none;
 }
+
 a {
 	text-decoration: none;
 	color:black;
@@ -172,6 +182,7 @@ path[class^="side"]
 	img{
 		display: block;
 		margin: auto;
+		position: relative;
 		&:nth-child(1) {
 			margin-top:100px;
 		}
@@ -190,9 +201,11 @@ path[class^="side"]
 	background: url("../img/border.png")  repeat-y center 0;
 	height: 250px;
 	position: relative;
-	margin:80px auto;
+	margin: 80px auto 50px auto;
 }
-
+.bottom {
+	margin-top: -200px
+}
 .subscribe {
 	margin: 0 auto;
 	height: 350px;
@@ -292,7 +305,7 @@ input[type=submit]
 
 @media (min-width: 768px) {
 	.bottom {
-		height: 100px;
+		margin-top:120px;
 	}
 	.hexText{
 		position: relative;
@@ -323,20 +336,21 @@ input[type=submit]
 			}
 			&:nth-child(2) {
 				background: url('../img/hex_connect.png') center center no-repeat;
-				top: -254px;
+				@include translate(0, -254px);
+				/*top: -254px;*/
 				margin-left: 65%;
 				
 			}
 			&:nth-child(3) {
 				background: url('../img/hex_learn.png') center center no-repeat;
-				top:-300px;
+				@include translate(0, -300px);
 				margin-left:65%;
 			}
 			&:nth-child(4) {
 				background: url('../img/hex_play.png') center center no-repeat;
 				float: right;
 				margin-right: 50%;
-				top:-150px;
+				@include translate(0, -150px);
 			}
 		}
 	}
@@ -366,10 +380,10 @@ input[type=submit]
 		}
 		&:nth-child(2) {
 			margin-left:50%;
-			top: 200px;
+			@include translate(0, 200px);
 		}
 		&:nth-child(3) {
-			top: 140px;
+			@include translate(0, 140px);
 			margin-left: 50%;
 		}
 		
