--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,404 @@
-/*
-Syntax error: Undefined mixin 'fillTransition'.
-        on line 107 of style.scss, in `fillTransition'
-        from line 107 of style.scss
+body {
+  margin: 0;
+  font-family: "Merriweather", serif;
+  font-size: 16px;
+  line-height: 1.5em;
+  color: #665e5b; }
 
-102: 	@include transitionDelay(5s);
-103: }
-104: 
-105: .accelerometer .mask {
-106: 	fill:black;
-107: 	@include fillTransition(30s);
-108: 	@include transitionDelay(0s);
-109: }
-110: 
-111: .mask.active {
-112: 	fill:white;
+img {
+  border: none; }
 
-Backtrace:
-style.scss:107:in `fillTransition'
-style.scss:107
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:320:in `block in visit_mixin'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:98:in `block in with_mixin'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:121:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:98:in `with_mixin'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:318:in `visit_mixin'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:121:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:389:in `block (2 levels) in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:389:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:389:in `block in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:387:in `visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:121:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:151:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/tree/root_node.rb:20:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/engine.rb:274:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/plugin/compiler.rb:479:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/plugin/compiler.rb:214:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/plugin/compiler.rb:208:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/plugin/compiler.rb:208:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/plugin/compiler.rb:457:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/lib/sass/plugin/compiler.rb:323:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.12/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined mixin 'fillTransition'.\A         on line 107 of style.scss, in `fillTransition'\A         from line 107 of style.scss\A \A 102: 	@include transitionDelay(5s);\A 103: }\A 104: \A 105: .accelerometer .mask {\A 106: 	fill:black;\A 107: 	@include fillTransition(30s);\A 108: 	@include transitionDelay(0s);\A 109: }\A 110: \A 111: .mask.active {\A 112: 	fill:white;"; }
+a {
+  text-decoration: none;
+  color: black; }
+
+h1, h2, h3 {
+  font-family: "Fjalla One", sans-serif;
+  font-weight: normal;
+  line-height: 1.2em;
+  text-transform: uppercase; }
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.mobile {
+  display: none; }
+
+path[class^="side"] {
+  -ms-transition: fill 2s ease-in-out ;
+  -webkit-transition: fill 2s ease-in-out ;
+  -moz-transition: fill 2s ease-in-out ;
+  -o-transition: fill 2s ease-in-out ;
+  transition: fill 2s ease-in-out ; }
+
+.active {
+  -ms-transition: fill 0.1s ease-in-out !important;
+  -webkit-transition: fill 0.1s ease-in-out !important;
+  -moz-transition: fill 0.1s ease-in-out !important;
+  -o-transition: fill 0.1s ease-in-out !important;
+  transition: fill 0.1s ease-in-out !important; }
+
+.accelerometer .active {
+  -ms-transition: fill 0s ease-in-out !important;
+  -webkit-transition: fill 0s ease-in-out !important;
+  -moz-transition: fill 0s ease-in-out !important;
+  -o-transition: fill 0s ease-in-out !important;
+  transition: fill 0s ease-in-out !important; }
+
+.side0 {
+  fill: white; }
+
+.side0.active {
+  fill: #5bc9e3; }
+
+.side1 {
+  fill: #f0f0f0; }
+
+.side1.active {
+  fill: #dee14e; }
+
+.side2 {
+  fill: #f7f7f7; }
+
+.side2.active {
+  fill: #a79b94; }
+
+.mask {
+  fill: black;
+  -ms-transition: fill 25s ease-in-out ;
+  -webkit-transition: fill 25s ease-in-out ;
+  -moz-transition: fill 25s ease-in-out ;
+  -o-transition: fill 25s ease-in-out ;
+  transition: fill 25s ease-in-out ;
+  -webkit-transition-delay: 5s;
+  -moz-transition-delay: 5s;
+  -o-transition-delay: 5s;
+  -ms-transition-delay: 5s;
+  transition-delay: 5s; }
+
+.accelerometer .mask {
+  fill: black;
+  -ms-transition: fill 30s ease-in-out ;
+  -webkit-transition: fill 30s ease-in-out ;
+  -moz-transition: fill 30s ease-in-out ;
+  -o-transition: fill 30s ease-in-out ;
+  transition: fill 30s ease-in-out ;
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  -ms-transition-delay: 0s;
+  transition-delay: 0s; }
+
+.mask.active {
+  fill: white; }
+
+.home img {
+  display: block;
+  position: absolute;
+  bottom: 20px;
+  margin-left: -15px;
+  left: 50%; }
+
+.intro {
+  width: 100%;
+  height: 600px;
+  overflow: visible;
+  background: url("../img/Courtyard-Color2.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #fff; }
+  .intro .introSide {
+    margin-top: -160px;
+    z-index: 100;
+    position: absolute;
+    width: 457px;
+    max-width: 50%;
+    height: 912px;
+    overflow: visible;
+    background: url("../img/side_logo_empty.png") no-repeat center center;
+    background-size: 100%; }
+    .intro .introSide h2 {
+      font-size: 4em;
+      margin: 391px auto 30px 130px; }
+    .intro .introSide p {
+      font-style: italic;
+      margin: 0px 25px auto 180px;
+      display: block; }
+
+.location {
+  background-color: #231f20;
+  position: relative;
+  z-index: 1; }
+  .location a {
+    display: block;
+    text-align: right;
+    color: white;
+    margin: 0 100px;
+    padding: 20px;
+    font-family: "Fjalla One", sans-serif;
+    font-size: 1.3em;
+    text-transform: uppercase; }
+    .location a img, .location a p {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 5px; }
+
+.hexImages {
+  position: absolute;
+  width: 100%;
+  overflow: hidden; }
+  .hexImages img {
+    display: block;
+    margin: auto;
+    position: relative; }
+    .hexImages img:nth-child(1) {
+      margin-top: 100px; }
+    .hexImages img:nth-child(2) {
+      margin-top: -100px; }
+
+.hexText h3 {
+  font-size: 3.5em;
+  color: #231f20;
+  margin: 0; }
+
+.seperator {
+  background: url("../img/border.png") repeat-y center 0;
+  height: 250px;
+  position: relative;
+  margin: 80px auto 50px auto; }
+
+.bottom {
+  margin-top: -200px; }
+
+.subscribe {
+  margin: 0 auto;
+  height: 350px;
+  width: 100%;
+  z-index: -1;
+  overflow: hidden;
+  font-size: 1.2em; }
+
+.subscribe form {
+  display: block;
+  margin: 50px auto;
+  text-align: center; }
+
+input {
+  border: 1px solid #231f20; }
+
+textarea:focus, input:focus {
+  outline: 0; }
+
+input[type=text] {
+  width: 346px;
+  height: 34px;
+  border: 1px solid #665e5b;
+  background-color: rgba(102, 94, 91, 0.05);
+  margin: 20px auto;
+  font-size: 1.2em;
+  padding: 0 10px; }
+
+input[type=checkbox] {
+  display: none; }
+
+input[type=checkbox].css-checkbox + label.css-label {
+  padding-left: 17px;
+  height: 12px;
+  display: inline-block;
+  line-height: 12px;
+  margin-top: 15px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  vertical-align: middle;
+  cursor: pointer; }
+
+input[type=checkbox].css-checkbox:checked + label.css-label {
+  background-position: 0 -12px; }
+
+label.css-label {
+  background-image: url(http://csscheckbox.com/checkboxes/u/csscheckbox_593adae689b6e344cda220b0a046cec5.png);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+input[type=submit] {
+  display: block;
+  color: white;
+  font-size: 1.2em;
+  padding: 5px 15px;
+  margin: 0 auto;
+  background-color: #231f20;
+  font-family: "Merriweather", serif;
+  cursor: pointer; }
+
+.social {
+  height: 233px;
+  background-color: #a79b94;
+  padding-top: 85px;
+  text-align: center; }
+  .social span {
+    display: inline-block; }
+  .social h3, .social a {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 5px;
+    font-size: 2em;
+    color: #fff; }
+
+.success {
+  text-align: center;
+  display: none; }
+
+@media (min-width: 768px) {
+  .hexText {
+    position: relative;
+    margin-bottom: -150px; }
+    .hexText div.outer {
+      width: 381px;
+      height: 439px;
+      display: table;
+      position: relative; }
+      .hexText div.outer .inner {
+        display: table-cell;
+        vertical-align: middle; }
+      .hexText div.outer h3 {
+        padding-left: 95px; }
+      .hexText div.outer p {
+        padding-left: 95px;
+        width: 270px; }
+      .hexText div.outer:nth-child(1) {
+        background: url("../img/hex_dine.png") center center no-repeat;
+        margin-right: 65%;
+        clear: both;
+        float: right; }
+      .hexText div.outer:nth-child(2) {
+        background: url("../img/hex_connect.png") center center no-repeat;
+        -o-transform: translate(0, -254px);
+        -ms-transform: translate(0, -254px);
+        -webkit-transform: translate(0, -254px);
+        -moz-transform: translate(0, -254px);
+        transform: translate(0, -254px);
+        /*top: -254px;*/
+        margin-left: 65%;
+        clear: both; }
+      .hexText div.outer:nth-child(3) {
+        background: url("../img/hex_learn.png") center center no-repeat;
+        -o-transform: translate(0, -300px);
+        -ms-transform: translate(0, -300px);
+        -webkit-transform: translate(0, -300px);
+        -moz-transform: translate(0, -300px);
+        transform: translate(0, -300px);
+        margin-left: 65%;
+        clear: both; }
+      .hexText div.outer:nth-child(4) {
+        background: url("../img/hex_play.png") center center no-repeat;
+        float: right;
+        margin-right: 50%;
+        clear: both;
+        -o-transform: translate(0, -150px);
+        -ms-transform: translate(0, -150px);
+        -webkit-transform: translate(0, -150px);
+        -moz-transform: translate(0, -150px);
+        transform: translate(0, -150px); } }
+@media (min-width: 768px) and (max-width: 992px) {
+  .intro .introSide h2 {
+    font-size: 3.5em; }
+
+  .location a {
+    margin: 0 0 0 100px; }
+
+  .hexImages img:nth-child(1) {
+    margin-top: 230px; }
+  .hexImages img:nth-child(3) {
+    margin-top: 300px;
+    padding-left: 50px; }
+
+  .hexText div.outer:nth-child(1) {
+    margin-right: 50%;
+    margin-top: -100px; }
+  .hexText div.outer:nth-child(2) {
+    margin-left: 50%;
+    -o-transform: translate(0, 200px);
+    -ms-transform: translate(0, 200px);
+    -webkit-transform: translate(0, 200px);
+    -moz-transform: translate(0, 200px);
+    transform: translate(0, 200px); }
+  .hexText div.outer:nth-child(3) {
+    -o-transform: translate(0, 140px);
+    -ms-transform: translate(0, 140px);
+    -webkit-transform: translate(0, 140px);
+    -moz-transform: translate(0, 140px);
+    transform: translate(0, 140px);
+    margin-left: 50%; }
+
+  .bottom {
+    margin-top: 120px; } }
+@media (max-width: 767px) and (orientation: landscape) {
+  .intro .introSide {
+    max-width: 35%; } }
+@media (max-width: 480px) {
+  .intro .introSide {
+    max-width: 60%; }
+    .intro .introSide h2 {
+      font-size: 1.8em; }
+
+  input[type=text] {
+    width: 246px; }
+
+  .location a {
+    padding: 20px 0; } }
+@media (max-width: 767px) {
+  .mobile {
+    display: inherit; }
+
+  .notmobile {
+    display: none; }
+
+  .seperator {
+    display: none; }
+
+  .intro {
+    height: 288px; }
+    .intro .introSide {
+      margin-top: -100px;
+      height: 450px; }
+      .intro .introSide h2 {
+        font-size: 2em;
+        margin: 200px auto 30px 50px; }
+      .intro .introSide p {
+        display: none; }
+
+  .introText {
+    margin: 80px 20px; }
+
+  .location a {
+    text-align: center;
+    margin: 0; }
+
+  .hexImages {
+    display: none; }
+
+  .hexText .outer {
+    margin: 40px 20px;
+    min-height: 240px; }
+    .hexText .outer:nth-child(1) {
+      background: url("../img/dine.png") right bottom no-repeat; }
+    .hexText .outer:nth-child(2) {
+      background: url("../img/connect.png") right bottom no-repeat; }
+    .hexText .outer:nth-child(3) {
+      background: url("../img/learn.png") right bottom no-repeat; }
+    .hexText .outer:nth-child(4) {
+      background: url("../img/play.png") right bottom no-repeat; }
+
+  .drawing {
+    border: 1px solid #a79b94;
+    height: 229px;
+    width: 100%;
+    background: url("../img/drawing.png") center center no-repeat; } }
